# cci-ft2-intelligence

./: .gitignore  .pre-commit-config.yaml  PR_DESCRIPTIONS.md  README.md  conftest.py  pr_summary.md  pyproject.toml  requirements.txt  run_windows_friendly.ps1
.github/: CODEOWNERS
.github/workflows/: guard.yml
config/: center_profiles.yaml  center_profiles_enhanced.yaml  ci_guard.yml  system_config.yaml  thresholds.yaml  vaccine_library.yaml
data/input_ft2/: 130600112764_202201241939.txt  freeze_clinic_130600112767.txt  heat_mobile_130600112769.txt  safe_hospital_130600112764.txt
data/input_raw/: freeze_clinic_130600112767.csv  heat_mobile_130600112769.csv  safe_hospital_130600112764.csv  test_data.csv
data/output/: centers_report.tsv
docs/: Clean_Architecture_Project.md  PROJECT_TREE.md  ProjectState.md  decision_matrix.md  project-retrospective.md  project_state_manifest.json
docs/adr/: 0001-adopt-structure.md  0003-phase2-findings.md  0004-final-closure.md  0004-implementation-summary.md  0004-phase3-plan.md  0005-architecture-lockdown.md  0005-simple-pipeline-migration.md  0006-scripts-migration.md  0007-introduce-application-ports-and-composition-root.md
docs/architecture/: DECISION_MATRIX.md  ENGINEERING_CHARTER.md  __init__.py
docs/releases/: BASELINE_v1.0.3.md
scripts/: check_no_core_entity_imports.py  create_test_data.py  debug_ft2.py  generate_pdf_report.py  project_utility.py  run_ft2_pipeline.py  simple_pipeline.py  simulate_vvm_scenarios.py  verify_visual_reports.py
src/: cli.py  main.py
tests/: test_phase2_structural_check.py
(+85 files in other folders)
