[tool.poetry]
name = "ft2-reporting"
version = "0.1.0"
description = "FT2 data processing and reporting pipeline"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
typer = "0.12.3"
pydantic = "^2.7"
reportlab = "^4.2"
pandas = "^2.2"
"pdfminer.six" = "^20231228"

# ---------- مجموعة التطوير ----------
click = "8.1.7"
[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"
ruff = "^0.5"
mypy = "^1.10"
pytest-snapshot = "^0.9"
syrupy = "^4.7"

[tool.poetry.scripts]
ft2-cli = "src.cli:main"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"